TigerParser.java
// Generated from Tiger.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TigerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, FLOAT=2, MAIN=3, COMMA=4, COLON=5, SEMI=6, LPAREN=7, RPAREN=8, 
		LBRACK=9, RBRACK=10, LBRACE=11, RBRACE=12, PERIOD=13, PLUS=14, MINUS=15, 
		MULT=16, DIV=17, EXP=18, EQ=19, NEQ=20, LESSER=21, GREATER=22, LESSEREQ=23, 
		GREATEREQ=24, AND=25, OR=26, ASSIGN=27, ARRAY=28, RECORD=29, BREAK=30, 
		DO=31, ELSE=32, FOR=33, FUNC=34, IF=35, IN=36, LET=37, OF=38, THEN=39, 
		TO=40, TYPE=41, VAR=42, WHILE=43, ENDIF=44, BEGIN=45, ENDDO=46, END=47, 
		RETURN=48, INTLIT=49, FLOATLIT=50, ID=51, WS=52;
	public static final int
		RULE_tigerprogram = 0, RULE_declarationsegment = 1, RULE_typedeclarationlist = 2, 
		RULE_vardeclarationlist = 3, RULE_functdeclarationlist = 4, RULE_typedeclaration = 5, 
		RULE_type = 6, RULE_fieldlist = 7, RULE_typeid = 8, RULE_vardeclaration = 9, 
		RULE_idlist = 10, RULE_itail = 11, RULE_optionalinit = 12, RULE_functdeclaration = 13, 
		RULE_paramlist = 14, RULE_paramlisttail = 15, RULE_rettype = 16, RULE_param = 17, 
		RULE_statseq = 18, RULE_stail = 19, RULE_ltail = 20, RULE_btail = 21, 
		RULE_statail = 22, RULE_stat = 23, RULE_statendy = 24, RULE_tail2 = 25, 
		RULE_tail3 = 26, RULE_expr = 27, RULE_exprtail = 28, RULE_consta = 29, 
		RULE_binaryoperator = 30, RULE_exprlist = 31, RULE_exprlisttail = 32, 
		RULE_lvalue = 33, RULE_lvaluetail = 34;
	public static final String[] ruleNames = {
		"tigerprogram", "declarationsegment", "typedeclarationlist", "vardeclarationlist", 
		"functdeclarationlist", "typedeclaration", "type", "fieldlist", "typeid", 
		"vardeclaration", "idlist", "itail", "optionalinit", "functdeclaration", 
		"paramlist", "paramlisttail", "rettype", "param", "statseq", "stail", 
		"ltail", "btail", "statail", "stat", "statendy", "tail2", "tail3", "expr", 
		"exprtail", "consta", "binaryoperator", "exprlist", "exprlisttail", "lvalue", 
		"lvaluetail"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'float'", "'int'", "'main'", "','", "':'", "';'", "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "'.'", "'+'", "'-'", "'*'", "'/'", "'**'", 
		"'='", "'<>'", "'<'", "'>'", "'<='", "'>='", "'&'", "'|'", "':='", "'array'", 
		"'record'", "'break'", "'do'", "'else'", "'for'", "'function'", "'if'", 
		"'in'", "'let'", "'of'", "'then'", "'to'", "'type'", "'var'", "'while'", 
		"'endif'", "'begin'", "'enddo'", "'end'", "'return'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INT", "FLOAT", "MAIN", "COMMA", "COLON", "SEMI", "LPAREN", "RPAREN", 
		"LBRACK", "RBRACK", "LBRACE", "RBRACE", "PERIOD", "PLUS", "MINUS", "MULT", 
		"DIV", "EXP", "EQ", "NEQ", "LESSER", "GREATER", "LESSEREQ", "GREATEREQ", 
		"AND", "OR", "ASSIGN", "ARRAY", "RECORD", "BREAK", "DO", "ELSE", "FOR", 
		"FUNC", "IF", "IN", "LET", "OF", "THEN", "TO", "TYPE", "VAR", "WHILE", 
		"ENDIF", "BEGIN", "ENDDO", "END", "RETURN", "INTLIT", "FLOATLIT", "ID", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tiger.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TigerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TigerprogramContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(TigerParser.MAIN, 0); }
		public TerminalNode LET() { return getToken(TigerParser.LET, 0); }
		public DeclarationsegmentContext declarationsegment() {
			return getRuleContext(DeclarationsegmentContext.class,0);
		}
		public TerminalNode IN() { return getToken(TigerParser.IN, 0); }
		public TerminalNode BEGIN() { return getToken(TigerParser.BEGIN, 0); }
		public StatseqContext statseq() {
			return getRuleContext(StatseqContext.class,0);
		}
		public TerminalNode END() { return getToken(TigerParser.END, 0); }
		public TigerprogramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tigerprogram; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterTigerprogram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitTigerprogram(this);
		}
	}

	public final TigerprogramContext tigerprogram() throws RecognitionException {
		TigerprogramContext _localctx = new TigerprogramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tigerprogram);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(MAIN);
			setState(71);
			match(LET);
			setState(72);
			declarationsegment();
			setState(73);
			match(IN);
			setState(74);
			match(BEGIN);
			setState(75);
			statseq();
			setState(76);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsegmentContext extends ParserRuleContext {
		public TypedeclarationlistContext typedeclarationlist() {
			return getRuleContext(TypedeclarationlistContext.class,0);
		}
		public VardeclarationlistContext vardeclarationlist() {
			return getRuleContext(VardeclarationlistContext.class,0);
		}
		public FunctdeclarationlistContext functdeclarationlist() {
			return getRuleContext(FunctdeclarationlistContext.class,0);
		}
		public DeclarationsegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationsegment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterDeclarationsegment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitDeclarationsegment(this);
		}
	}

	public final DeclarationsegmentContext declarationsegment() throws RecognitionException {
		DeclarationsegmentContext _localctx = new DeclarationsegmentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarationsegment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			typedeclarationlist();
			setState(79);
			vardeclarationlist();
			setState(80);
			functdeclarationlist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedeclarationlistContext extends ParserRuleContext {
		public TypedeclarationContext typedeclaration() {
			return getRuleContext(TypedeclarationContext.class,0);
		}
		public TypedeclarationlistContext typedeclarationlist() {
			return getRuleContext(TypedeclarationlistContext.class,0);
		}
		public TypedeclarationlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedeclarationlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterTypedeclarationlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitTypedeclarationlist(this);
		}
	}

	public final TypedeclarationlistContext typedeclarationlist() throws RecognitionException {
		TypedeclarationlistContext _localctx = new TypedeclarationlistContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typedeclarationlist);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				typedeclaration();
				setState(83);
				typedeclarationlist();
				}
				break;
			case FUNC:
			case IN:
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclarationlistContext extends ParserRuleContext {
		public VardeclarationContext vardeclaration() {
			return getRuleContext(VardeclarationContext.class,0);
		}
		public VardeclarationlistContext vardeclarationlist() {
			return getRuleContext(VardeclarationlistContext.class,0);
		}
		public VardeclarationlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclarationlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterVardeclarationlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitVardeclarationlist(this);
		}
	}

	public final VardeclarationlistContext vardeclarationlist() throws RecognitionException {
		VardeclarationlistContext _localctx = new VardeclarationlistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vardeclarationlist);
		try {
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				vardeclaration();
				setState(89);
				vardeclarationlist();
				}
				break;
			case FUNC:
			case IN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctdeclarationlistContext extends ParserRuleContext {
		public FunctdeclarationContext functdeclaration() {
			return getRuleContext(FunctdeclarationContext.class,0);
		}
		public FunctdeclarationlistContext functdeclarationlist() {
			return getRuleContext(FunctdeclarationlistContext.class,0);
		}
		public FunctdeclarationlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functdeclarationlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterFunctdeclarationlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitFunctdeclarationlist(this);
		}
	}

	public final FunctdeclarationlistContext functdeclarationlist() throws RecognitionException {
		FunctdeclarationlistContext _localctx = new FunctdeclarationlistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functdeclarationlist);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNC:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				functdeclaration();
				setState(95);
				functdeclarationlist();
				}
				break;
			case IN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedeclarationContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(TigerParser.TYPE, 0); }
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public TerminalNode EQ() { return getToken(TigerParser.EQ, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(TigerParser.SEMI, 0); }
		public TypedeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterTypedeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitTypedeclaration(this);
		}
	}

	public final TypedeclarationContext typedeclaration() throws RecognitionException {
		TypedeclarationContext _localctx = new TypedeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typedeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(TYPE);
			setState(101);
			match(ID);
			setState(102);
			match(EQ);
			setState(103);
			type();
			setState(104);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeidContext typeid() {
			return getRuleContext(TypeidContext.class,0);
		}
		public TerminalNode ARRAY() { return getToken(TigerParser.ARRAY, 0); }
		public TerminalNode LBRACK() { return getToken(TigerParser.LBRACK, 0); }
		public TerminalNode INTLIT() { return getToken(TigerParser.INTLIT, 0); }
		public TerminalNode RBRACK() { return getToken(TigerParser.RBRACK, 0); }
		public TerminalNode OF() { return getToken(TigerParser.OF, 0); }
		public TerminalNode RECORD() { return getToken(TigerParser.RECORD, 0); }
		public FieldlistContext fieldlist() {
			return getRuleContext(FieldlistContext.class,0);
		}
		public TerminalNode END() { return getToken(TigerParser.END, 0); }
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				typeid();
				}
				break;
			case ARRAY:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				match(ARRAY);
				setState(108);
				match(LBRACK);
				setState(109);
				match(INTLIT);
				setState(110);
				match(RBRACK);
				setState(111);
				match(OF);
				setState(112);
				typeid();
				}
				break;
			case RECORD:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				match(RECORD);
				setState(114);
				fieldlist();
				setState(115);
				match(END);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldlistContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public TerminalNode COLON() { return getToken(TigerParser.COLON, 0); }
		public TypeidContext typeid() {
			return getRuleContext(TypeidContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(TigerParser.SEMI, 0); }
		public FieldlistContext fieldlist() {
			return getRuleContext(FieldlistContext.class,0);
		}
		public FieldlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterFieldlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitFieldlist(this);
		}
	}

	public final FieldlistContext fieldlist() throws RecognitionException {
		FieldlistContext _localctx = new FieldlistContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_fieldlist);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(ID);
				setState(121);
				match(COLON);
				setState(122);
				typeid();
				setState(123);
				match(SEMI);
				setState(124);
				fieldlist();
				}
				break;
			case END:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeidContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(TigerParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(TigerParser.FLOAT, 0); }
		public TypeidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterTypeid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitTypeid(this);
		}
	}

	public final TypeidContext typeid() throws RecognitionException {
		TypeidContext _localctx = new TypeidContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_typeid);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(TigerParser.VAR, 0); }
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public TerminalNode COLON() { return getToken(TigerParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public OptionalinitContext optionalinit() {
			return getRuleContext(OptionalinitContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(TigerParser.SEMI, 0); }
		public VardeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterVardeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitVardeclaration(this);
		}
	}

	public final VardeclarationContext vardeclaration() throws RecognitionException {
		VardeclarationContext _localctx = new VardeclarationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_vardeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(VAR);
			setState(132);
			idlist();
			setState(133);
			match(COLON);
			setState(134);
			type();
			setState(135);
			optionalinit();
			setState(136);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdlistContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public ItailContext itail() {
			return getRuleContext(ItailContext.class,0);
		}
		public IdlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterIdlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitIdlist(this);
		}
	}

	public final IdlistContext idlist() throws RecognitionException {
		IdlistContext _localctx = new IdlistContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_idlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(ID);
			setState(139);
			itail();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItailContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(TigerParser.COMMA, 0); }
		public IdlistContext idlist() {
			return getRuleContext(IdlistContext.class,0);
		}
		public ItailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_itail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterItail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitItail(this);
		}
	}

	public final ItailContext itail() throws RecognitionException {
		ItailContext _localctx = new ItailContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_itail);
		try {
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				match(COMMA);
				setState(142);
				idlist();
				}
				break;
			case COLON:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptionalinitContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(TigerParser.ASSIGN, 0); }
		public ConstaContext consta() {
			return getRuleContext(ConstaContext.class,0);
		}
		public OptionalinitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionalinit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterOptionalinit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitOptionalinit(this);
		}
	}

	public final OptionalinitContext optionalinit() throws RecognitionException {
		OptionalinitContext _localctx = new OptionalinitContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_optionalinit);
		try {
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASSIGN:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				match(ASSIGN);
				setState(147);
				consta();
				}
				break;
			case SEMI:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctdeclarationContext extends ParserRuleContext {
		public TerminalNode FUNC() { return getToken(TigerParser.FUNC, 0); }
		public TerminalNode ID() { return getToken(TigerParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(TigerParser.LPAREN, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TigerParser.RPAREN, 0); }
		public RettypeContext rettype() {
			return getRuleContext(RettypeContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(TigerParser.BEGIN, 0); }
		public StatseqContext statseq() {
			return getRuleContext(StatseqContext.class,0);
		}
		public TerminalNode END() { return getToken(TigerParser.END, 0); }
		public TerminalNode SEMI() { return getToken(TigerParser.SEMI, 0); }
		public FunctdeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functdeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).enterFunctdeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TigerListener ) ((TigerListener)listener).exitFunctdeclaration(this);
		}
	}

	public final FunctdeclarationContext functdeclaration() throws RecognitionException {
		FunctdeclarationContext _localctx = new FunctdeclarationContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_functdeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(FUNC);
			setState(152);
			match(ID);
			setState(153);
			match(LPAREN);
			setState(154);
			paramlist();
			setState(155);
			match(RPAREN);
			setState(156);
			rettype();
			setState(157);
			match(BEGIN);
			setState(158);
			statseq();
			setState(159);
			match(END);
			setState(160);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
